--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -42,6 +42,8 @@
 .setInnerHtml {
   max-width: 700px;
   margin: 50px auto;
+  font-size: 1.5rem;
+  line-height: 1.6;
   pre {
     color: white;
     background-color: black;
@@ -50,5 +52,10 @@
   }
   img {
     max-width: 700px;
+  }
+  h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 30px 0;
   }
 }
